--- a/modules/swagger-codegen/src/main/resources/python/__init__model.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/__init__model.mustache
@@ -2,6 +2,10 @@
 """Add all of the modules in the current directory to __all__"""
 import os
 
+{{#models}}{{#model}}
+from .{{classVarName}} import {{classname}}
+{{/model}}{{/models}}
+
 __all__ = []
 
 for module in os.listdir(os.path.dirname(__file__)):
