--- a/modules/swagger-codegen/src/main/resources/Java/apiInvoker.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/apiInvoker.mustache
@@ -32,7 +32,6 @@ import java.text.SimpleDateFormat;
 import java.text.ParseException;
 
 public class ApiInvoker {
-  private static ApiInvoker INSTANCE = new ApiInvoker();
   private Map<String, Client> hostMap = new HashMap<String, Client>();
   private Map<String, String> defaultHeaderMap = new HashMap<String, String>();
   private boolean isDebug = false;
@@ -52,14 +51,16 @@ public class ApiInvoker {
   static {
     // Use UTC as the default time zone.
     DATE_TIME_FORMAT.setTimeZone(TimeZone.getTimeZone("UTC"));
-    DATE_FORMAT.setTimeZone(TimeZone.getTimeZone("UTC"));
+    DATE_FORMAT.setTimeZone(TimeZone.getTimeZone("UTC"));    
+  }
 
+  public ApiInvoker() {
     // Set default User-Agent.
     setUserAgent("Java-Swagger");
   }
 
-  public static void setUserAgent(String userAgent) {
-    INSTANCE.addDefaultHeader("User-Agent", userAgent);
+  public void setUserAgent(String userAgent) {
+    this.addDefaultHeader("User-Agent", userAgent);
   }
 
   public static Date parseDateTime(String str) {
@@ -106,10 +107,6 @@ public class ApiInvoker {
   }
   public void enableDebug() {
     isDebug = true;
-  }
-
-  public static ApiInvoker getInstance() {
-    return INSTANCE;
   }
 
   public void addDefaultHeader(String key, String value) {
