--- a/modules/swagger-codegen/src/main/resources/php/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/api.mustache
@@ -40,6 +40,7 @@ class {{classname}} {
    */
    public function {{nickname}}({{#allParams}}${{paramName}}{{#optional}}=null{{/optional}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) {
 
+      $body = null;
       // parse inputs
       $resourcePath = "{{path}}";
       $resourcePath = str_replace("{format}", "json", $resourcePath);
