--- a/modules/swagger-codegen/src/main/resources/php/APIClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/APIClient.mustache
@@ -289,7 +289,7 @@ class APIClient {
       $deserialized = $values;
     } elseif ($class == 'DateTime') {
       $deserialized = new \DateTime($data);
-    } elseif (in_array($class, array('string', 'int', 'float', 'bool'))) {
+    } elseif (in_array($class, array('string', 'int', 'float', 'bool', 'object'))) {
       settype($data, $class);
       $deserialized = $data;
     } elseif (isset($translateTypes[$class])) {
